Add login and signup pages with responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -63,3 +63,11 @@ h4 {
 .footer-link-list {
   @apply text-xs lg:text-base;
 }
+
+/* Desktop Only Shadow */
+@media (min-width: 1024px) {
+  .box-shadow-signup {
+    box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px,
+      rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
+  }
+}
