--- a/src/index.css
+++ b/src/index.css
@@ -71,3 +71,9 @@ h4 {
       rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
   }
 }
+
+@media (min-width:1024px) {
+  .box-shadow-signup-btn {
+    box-shadow: 0 5px 30px rgba(0,0,0,.08);
+  }
+}
